login header and other visibility fixed

--- a/LoginApp/src/app/home/home.component.css
+++ b/LoginApp/src/app/home/home.component.css
@@ -3,3 +3,6 @@ footer {
     color: white;
     padding: 15px;
   }
+.userAlive{
+  visibility: hidden;
+}
